--- a/index.html
+++ b/index.html
@@ -38,8 +38,24 @@
     <!-- Main Content -->
     <main class="main">
         <!-- Hero Section -->
-        <section class="hero">
-            <!-- Hero content will go here -->
+        <section class="hero section">
+            <div class="container">
+                <div class="hero__content">
+                    <div class="hero__text">
+                        <h1 class="hero__title">
+                            Navigating the digital landscape for success
+                        </h1>
+                        <p class="hero__description">
+                            Our digital marketing agency helps businesses grow and succeed online through effective SEO,
+                            PPC, social media marketing, and content creation.
+                        </p>
+                        <button class="btn btn--primary">Book a consultation</button>
+                    </div>
+                    <div class="hero__image">
+                        <img src="images/hero-illustration.svg" alt="Digital marketing illustration">
+                    </div>
+                </div>
+            </div>
         </section>
 
         <!-- Services Section -->
